tests/semantic/invalid/invalid_numeric_assignment.mc
float value = 1.0;
value = 1;
